enlarge the carousel and the rest of the homepage elements

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -25,13 +25,16 @@ body {
   h1{
     color: $submit-button-green;
     font-weight: 700;
+    font-size: 50px;
     font-family: 'Montserrat', sans-serif;
 
   }
-  p {
+  h5 {
     color:$submit-button-green;
+    //color: white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
+    text-shadow: white 0px 0px 10px;
 
 
   }
@@ -43,7 +46,7 @@ body {
   color:white;
   padding: 10px 20px;
   border-radius: 5px;
-  margin-right:5px;
+  margin-right:15px;
 }
 
 .btn-veterinarian:hover{
@@ -57,7 +60,7 @@ body {
   color:white;
   padding: 10px 20px;
   border-radius: 5px;
-  margin-left:5px;
+  margin-left: 15px;
 
 }
 
@@ -88,6 +91,7 @@ body {
   overflow: hidden;
   height: 150px;
   width: 400px;
+  margin-bottom: 20px;
      // box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
@@ -103,7 +107,7 @@ body {
   h2{
     // margin-top:3px;
    text-align:center;
-   font-size: 40px;
+   font-size: 60px;
    color:$submit-button-green;
    margin-bottom: 0;
    margin-top: 15px;
@@ -111,6 +115,7 @@ body {
 }
 
 .master-box {
+  max-height: 100%;
   height: 100vh;
 }
 
@@ -119,7 +124,10 @@ body {
 }
 
 .box-1 {
-  h5{
+  // margin-left: 20%;
+  height: 100%;
+  width: 100%;
+  h3{
     // color:white;
     color: $submit-button-orange;
     margin: 5px 5px;
@@ -155,23 +163,32 @@ body {
 
 .customer-box {
    text-align:center;
-   color: $submit-button-orange;
+   color: $submit-button-green;
+   h2 {
+    font-size: 60px;
+   }
 
 }
 
 
 .carousel{
-
    width: 600px;
 }
+
+#myCarousel{
+  width: 100%;
+}
+
 .carousel-inner{
     text-align: center;
-    min-height: 350px;
-    max-width:400px; /* Prevent carousel from being distorted if for some reason image doesn't load */
+    height: 500px;
+    width: 85%;
+    max-width: 90%;
+    // max-width:400px; /* Prevent carousel from being distorted if for some reason image doesn't load */
 }
 
 .review {
-  background-color: white;
+  // background-color: white;
   border-style: 2px solid grey;
   border-radius:10px;
   // width: 200px;
@@ -196,8 +213,8 @@ body {
 
 .avatar {
   margin: 15px 5px;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
     border: 2px solid white;
     background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), image-url("profile2.jpg");
