added default avatars for pet and vet and styled the booking status in owners dash

--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -55,10 +55,17 @@
                 <div class="one-booking-a-col" style="margin-right: 10px; padding: 5px 0 10px 10px">
                   <p> <%= booking.date %></p>
                   <p>Time: <%= booking.time.to_s(:time)  %></p>
-                  <p> Status: <%= booking.accepted? ? "Confirmed" : "Pending" %>
+                  <% if booking.accepted? %>
+                    <p> Status: <span style="color: green; font-weight: bold">Confirmed</span></p>
+                  <% else %>
+                    <p> Status: <span style="color: #F1C232; font-weight: bold">Pending</span></p>
+                  <% end %>
+
+
+                  <!-- <p> Status: <%#= booking.accepted? ? "Confirmed" : "Pending" %></p> -->
                 </div>
                 <div class="flex-fill one-booking-b-col" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
-                  
+
                   <p>Pet name: <%= booking.pet.name%></p>
                   <p>Clinic name: <%= booking.vet.user.name%></p>
                   <p>Clinic address: <%= booking.vet.user.location %></p>
@@ -91,8 +98,8 @@
                     <!-- <a class="dropdown-item c-col-item" href="#">Cancel booking</a> -->
                   </div>
                 </div> </div>
-            
-              
+
+
             <% end %>
 
 
