--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -27,7 +27,9 @@
             <%= cl_image_tag( vet.photo.key, :class => "cloudinary-vet-profile-picture" ) %>
 
       <% else %>
-            <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80" alt="photo" class="avatar vet-profile-picture">
+            <!-- <img src="https://icon-library.com/images/anonymous-avatar-icon/anonymous-avatar-icon-25.jpg" alt="photo" class="avatar vet-profile-picture"> -->
+            <%= image_tag "default-profile-image.jpg", :class => 'avatar vet-profile-picture' %>
+
           <% end %>
 
           </div>
