--- a/app/assets/stylesheets/pages/clinics/_edit.scss
+++ b/app/assets/stylesheets/pages/clinics/_edit.scss
@@ -36,6 +36,7 @@
     font-weight: 400;
     margin-top: 10px;
     align-items: center;
+    justify-content: center;
     //border: 3px solid black;
     width: 100%;
     // margin-top: 0;
@@ -46,7 +47,7 @@
 }
 
 .clinic-edit-buttons {
-margin-top: 10px;
+margin-top: 40px;
 
 .submit_class {
   color:white;
@@ -65,7 +66,7 @@ margin-top: 10px;
   padding: 8px 13px;
   border: 1px solid $submit-button-orange;
   border-radius: 5px;
-  width: 80px;
+  width: 100px;
   text-align:center;
   margin-left: 5px;
 
