--- a/app/views/clinics/edit.html.erb
+++ b/app/views/clinics/edit.html.erb
@@ -5,11 +5,11 @@
         <div class="form-inputs-clinic-edit d-flex">
 
         <%= simple_form_for(@clinic, :url => {:action => 'update', :id => @clinic.id}) do |f| %>
-          <%= f.input :name %>
+          <%= f.input :name, label: "Clinic name" %>
           <%= f.input :owner_name %>
           <%= f.input :phone_number %>
           <%= f.input :email %>
-          <%= f.input :location %>
+          <%= f.input :location, label: "Full address" %>
           <%= f.input :photo, as: :file, label: "Upload a clinic logo" %>
           <div class="clinic-edit-buttons d-flex justify-content-around">
             <%= f.submit "Submit", disable_with: 'Submiting...', class: "submit_class" %>
