--- a/app/views/owners/_info_window.html.erb
+++ b/app/views/owners/_info_window.html.erb
@@ -1,3 +1,6 @@
+<% if clinic.photo.attached? %>
+    <%= cl_image_tag( clinic.photo.key,width: 50px, height: 50px, crop: :fill) %>
+<%end%> 
 <h3><%= clinic.name %></h3>
 <p><%= clinic.location %></p>
 
