--- a/app/assets/stylesheets/devise/registrations/_new.scss
+++ b/app/assets/stylesheets/devise/registrations/_new.scss
@@ -42,3 +42,14 @@
 
 
 }
+
+.registration-links {
+  a {
+    color:$submit-button-green;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    margin-right:20px;
+    text-align:center;
+
+  }
+}
