--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,10 @@
             <div class="form-actions d-flex justify-content-between">
               <%= f.button :submit, "Sign up", :class => 'submit_class'  %>
               <%= link_to "Back", :back, class: "btn_back"%>
-              <%= render "users/shared/links" %>
+            </div>
+
+            <div class="d-flex justify-content-center mt-4 registration-links">
+            <%= render "users/shared/links" %>
             </div>
 
           </div>
@@ -59,10 +62,12 @@
             <div class="form-actions d-flex justify-content-between">
               <%= f.button :submit, "Sign up", :class => 'submit_class'  %>
               <%= link_to "Back", :back, class: "btn_back"%>
-              <%= render "users/shared/links", locals: { myclass: 'btn_back' }  %>
+
 
           </div>
-
+            <div class="d-flex justify-content-center mt-4 registraton-links">
+              <%= render "users/shared/links", locals: { myclass: 'btn_back' }  %>
+            </div>
   <% end%>
 <% end %>
 
