--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -65,7 +65,7 @@
 
 
           </div>
-            <div class="d-flex justify-content-center mt-4 registraton-links">
+            <div class="d-flex justify-content-center mt-4 registration-links">
               <%= render "users/shared/links", locals: { myclass: 'btn_back' }  %>
             </div>
   <% end%>
