--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -14,6 +14,18 @@
 
   <h1><strong><%= @clinic.name %></strong></h1>
   <h3><%= @clinic.location %></h3>
+
+
+
+<% @clinic.pictures.each do |picture| %>
+  <%= cl_image_tag(picture.key) %>
+  <%= link_to "delete", delete_pic_clinic_path(picture), method: :delete %>
+<% end %>
+
+
+
+
+  <%= @clinic.bio %>
   <h2><strong>OUR VETS</strong></h2>
 
 
