--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -92,7 +92,7 @@
       </div>
 
        <div class="d-flex align-items-start last-box col-3 justify-content-end" >
-        <%= link_to "🔍 Full report", '#', class: "btn-record"%>
+        <%= link_to "🔍 Full report", owner_pet_health_record_path(@pet.user, @pet, record), class: "btn-record"%>
       </div>
 
       </div>
@@ -123,7 +123,7 @@
       </div>
 
        <div class="d-flex align-items-center last-box col-1">
-   <!-- <%= link_to "View full records", '#', class: "btn-record"%> -->
+  <%= link_to "View full records", '#', class: "btn-record"%> -->
       </div>
 
   </div>
@@ -146,7 +146,7 @@
       </div>
 
        <div class="d-flex align-items-center last-box col-1">
-   <%= link_to "View full records", owner_pet_health_record_path(@owner, @pet, record), class: "btn-record"%>
+   <%= link_to "View full records", owner_pet_health_record_path(@pet.user, @pet, record), class: "btn-record"%>
       </div>
 
       </div>
