--- a/app/assets/stylesheets/pages/owners/_dash.scss
+++ b/app/assets/stylesheets/pages/owners/_dash.scss
@@ -65,6 +65,10 @@
   width: 20%;
 }
 
+.booking-manage-action{
+  margin-bottom: 10px;
+}
+
 .one-booking-col-btn {
   margin-top: 5px;
   margin-right: 5px;
@@ -142,6 +146,15 @@ h1 {
   text-align: left;
 }
 
+.pet-card-back p{
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 16px;
+  font-family: "Raleway", sans-serif;
+  line-height: 1.5em;
+  //border: 1px solid black;
+}
+
 .pet-card-container {
 
   //margin: 20px;
@@ -198,13 +211,16 @@ h1 {
 // }
 
 .button-view-pet-record,
-.button-edit-pet-record,
+.button-edit-pet-info,
 .button-remove-pet{
     color:$submit-button-green;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
+    font-size: 12px;
     //margin-right:20px;
     text-align:center;
+    margin-bottom: 0;
+    //border: 1px solid green;
 }
 
 
