--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -56,6 +56,7 @@
 
 
         <!-- ALL REMINDERS (including APPOINTMENTS) start-->
+
           <h3 style="color: #FF7E67; font-weight: 200; text-align: center">REMINDERS</h3>
           <div class="d-flex flex-wrap justify-content-around">
           <% @owner.pets.take(2).each do |pet| %>
@@ -66,6 +67,7 @@
                 <div class="one-booking-col-grey-bar">
                 </div>
                 <div class="one-booking-a-col">
+
                   <p>Date:<br><%= booking.date %></p>
                   <p>Time:<br><%= booking.time.to_s(:time)  %></p>
                   <% if booking.accepted? %>
@@ -75,17 +77,9 @@
                   <% end %>
                   <!-- <p> Status: <%#= booking.accepted? ? "Confirmed" : "Pending" %></p> -->
                 </div>
+
                 <div class="flex-fill one-booking-b-col" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
-
-                  <p>Pet: <%= booking.pet.name%></p>
-                  <p>Clinic: <%= booking.vet.user.name%></p>
-                  <p>Address: <%= booking.vet.user.location %></p>
-                  <p>Veterinary: <%= booking.vet.first_name %> <%= booking.vet.last_name %></p>
-
-                </div>
-
-
-                <div class="dropdown one-booking-c-col">
+                  <div class="d-flex justify-content-end">
                   <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
 
                   <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
@@ -102,6 +96,19 @@
                     <% end %>
 
                   </div>
+                  </div>
+                  <p>Pet: <%= booking.pet.name%></p>
+                  <p>Clinic: <%= booking.vet.user.name%></p>
+                  <p>Address: <%= booking.vet.user.location %></p>
+                  <p>Veterinary: <%= booking.vet.first_name %> <%= booking.vet.last_name %></p>
+
+
+
+                <!-- </div> -->
+
+
+                <!-- <div class="dropdown one-booking-c-col"> -->
+
                 </div>
               </div>
             <% end %>
@@ -112,6 +119,8 @@
 
 
 <!-- PET CARDS start -->
+
+    <h3 style="color: #FF7E67; font-weight: 200; text-align: center; margin-top: 20px;">YOUR FAMILY</h3>
 <% @owner.pets.each do |pet| %>
 <div class="container pet-card-container">
     <div class="flipper pet-card-flipper">
@@ -125,30 +134,38 @@
         <% end %>
         <p class="caption pet-card-caption"><%= pet.name %></p>
       </div>
-      <div class="back pet-card-back">
+      <div class="back d-flex pet-card-back">
+        <div class="col">
 
-        <h1><%= pet.name %></h1>
+          <div style="height: 180px;">
+            <h1 style="padding-bottom: 20px;"><%= pet.name %></h1>
 
-        <p class="pet-card-date"></p>
-        <p class="pet-card-description"><%= pet.dob %></p>
-        <p class="pet-card-description"><%= pet.breed %></p>
-
-        <div>
-
-          <div class="d-flex justify-content-between align-items-bottom">
-            <%= link_to "View records",owner_pet_path(@owner,pet), class: "btn button-view-pet-record"%>
-            <%#= link_to "Edit basic info", edit_owner_pet_path(@owner,  pet), data: { turbolinks: false }, class: "btn button-edit-pet-record" %>
-            <%= link_to "Remove",
-              owner_pet_path(@owner,pet),
-              :method => :delete,
-              data: { confirm: "Are you sure you wish to delete your pet?" },
-              class: "btn button-remove-pet" %>
+            <p class="pet-card-date"></p>
+            <p class="pet-card-description">Birthday: <%= pet.dob %></p>
+            <p class="pet-card-description">Breed: <%= pet.breed %></p>
+            <p class="pet-card-description">Gender: <%= pet.gender %></p>
           </div>
+
+
+          <div style="margin-bottom: 0; padding-bottom: 0;">
+            <%= link_to "Edit basic info", edit_owner_pet_path(@owner,  pet), data: { turbolinks: false }, class: "btn button-edit-pet-info" %>
+
+            <div class="d-flex justify-content-between align-items-bottom">
+
+              <%= link_to "View records",owner_pet_path(@owner,pet), class: "btn button-view-pet-record"%>
+              <%#= link_to "Edit basic info", edit_owner_pet_path(@owner,  pet), data: { turbolinks: false }, class: "btn button-edit-pet-record" %>
+              <%= link_to "Remove",
+                owner_pet_path(@owner,pet),
+                :method => :delete,
+                data: { confirm: "Are you sure you wish to delete your pet?" },
+                class: "btn button-remove-pet" %>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
     </div>
-  </div>
-  <%end%>
+    <%end%>
 <!-- PET CARDS end-->
 
 
