--- a/app/assets/stylesheets/pages/pets/_show.scss
+++ b/app/assets/stylesheets/pages/pets/_show.scss
@@ -12,12 +12,89 @@ h4 {
  }
 }
 
+
+.underline {
+  font-size: 0.75em;
+}
+
+
+.flip-card-petshow {
+  perspective: 1000px;
+  display: inline-block;
+  // margin: 3%;
+}
+
+.flip-card-petshow:hover .flipper {
+  transform: rotateY(180deg);
+}
+
+.flip-card-petshow,
+.front,
+.back {
+  width: 280px;
+  height: 280px;
+}
+
+.flipper-card-petshow {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+.flipper-card-front {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 280px;
+  height: 280px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.caption-card-back {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 280px;
+  height: 280px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.underline{
+  color:$submit-button-green;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  padding-left: 10px;
+}
+}
+
+.name {
+  color: $submit-button-orange;
+  font-weight: 700;
+  font-family: 'Montserrat', sans-serif;
+  padding: 10px 20px;
+  text-align:center;
+ }
+
+.flipper-card-front {
+  z-index: 2;
+}
+
+.caption-card-back {
+  transform: rotateY(180deg);
+}
+
+#content {
+  text-align: center;
+}
+
 .vaccinations-header {
  h4 {
    color: $submit-button-orange;
    font-weight: 400;
   font-family: 'Montserrat', sans-serif;
-  padding: 20px 20px;
+  margin-bottom: 10px;
+  padding-left: 25px;
 }
 }
 
@@ -30,6 +107,17 @@ h4 {
   font-family: 'Montserrat', sans-serif;
   padding: 10px 10px;
   }
+}
+
+.vaccination-content {
+padding-left: 0;
+margin-left: 0;
+}
+
+.container-vaccinations-flow {
+height: 150px;
+overflow: auto;
+padding-left: 0;
 }
 
 .info-written {
@@ -46,23 +134,25 @@ h4 {
 }
 
 
-.petavatar-round {
-  margin: 5px 5px;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  border: 2px solid white;
+
+.petavatar-fixed {
+  width: 100%;
+  height: 100%;
+  // border-radius: 5%;
+  border: 1px solid white;
   background-size: cover;
-  object-fit: cover;
+  object-fit: cover;;
 }
 
 .avatar-doggy {
-  margin: 5px 5px;
-  width: 200px;
-  height: 200px;
-   border-radius: 50%;
-  border: 2px solid white;
+  // margin: 5px 5px;
+  width: 100%;
+  height: 100%;
+  // border-radius: 5%;
+  border: 1px solid white;
   background-size: cover;
+  object-fit: cover;
+
 }
 
 
@@ -72,10 +162,14 @@ h4 {
   font-weight: 500;
 }
 
-.generalinfo {
-  // background-color: $submit-button-orange;
-  padding: 15px 15px;
-  border-bottom: 5px dotted $submit-button-orange;
+.first-row{
+   padding: 10px 10px;
+}
+
+.dotted-line {
+  margin-top: 20px;
+  margin-bottom:20px;
+  // border-bottom: 15px dotted $submit-button-orange;
 }
 
 .input-diagnosis {
@@ -92,7 +186,7 @@ h4 {
 
 .diagnosis {
   padding: 15px 15px;
-  border-bottom: 5px dotted $submit-button-orange;
+  // border-bottom: 5px dotted $submit-button-orange;
 }
 
 .medicalrecord{
@@ -117,7 +211,6 @@ h4 {
 
 
 .last-box {
-background-color: $my-background-color;
 border-style: none;
 }
 
@@ -178,11 +271,13 @@ overflow: auto;
 }
 
 .vaccinations {
-  padding: 15px 15px;
-  border-bottom: 5px dotted $submit-button-orange;
+ padding: 10px 10px;
+  // border-bottom: 5px dotted $submit-button-orange;
+  height:100%;
+  width:100%;
 }
 
-a.btn_back {
+.btn_back {
   text-decoration: none;
   color: $submit-button-green;
   padding: 15px 15px;
