--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -64,7 +64,7 @@
     <div class= "container d-flex align-items-start mb-2">
 
       <div class="d-flex align-items-end col-1 justify-content-end">
-          <%= link_to "✏️", edit_owner_pet_health_record_path(@pet.user, @pet, record)%>
+          <%= link_to "✏️", edit_owner_pet_vaccination_path(@owner,@pet,record) %>
       </div>
 
       <div class="one-vaccination-a col-3 d-flex align-items-start">
@@ -78,6 +78,8 @@
       <div class="col-3 one-vaccination-c d-flex align-items-start " >
         <p><%#=  %></p>
       </div>
+
+      
     </div>
 
 
@@ -127,7 +129,7 @@
 
       <div class="one-diagnosis-date col-3 d-flex align-items-start">
         <p><%= record.diagnosis_date %></p>
-        <%= link_to "✏️", edit_owner_pet_health_record_path(@pet.user, @pet, record)%>
+        <%= link_to "✏️", edit_owner_pet_diagnosis_path(@pet.user, @pet, record)%>
 
       </div>
 
