--- a/app/assets/stylesheets/pages/pets/_show.scss
+++ b/app/assets/stylesheets/pages/pets/_show.scss
@@ -2,7 +2,7 @@
   height: 100vh;
 }
 
-.header{
+.pet-show-header{
 h4 {
    color: $submit-button-orange;
    font-weight: 700;
@@ -13,7 +13,7 @@ h4 {
 }
 
 
-.underline {
+.back-underline {
   font-size: 0.75em;
 }
 
@@ -24,13 +24,13 @@ h4 {
   // margin: 3%;
 }
 
-.flip-card-petshow:hover .flipper {
+.flip-card-petshow:hover .flipper-card-petshow {
   transform: rotateY(180deg);
 }
 
 .flip-card-petshow,
-.front,
-.back {
+.flipper-card-front,
+.caption-card-back {
   width: 280px;
   height: 280px;
 }
@@ -60,7 +60,7 @@ h4 {
   height: 280px;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-.underline{
+.back-underline{
   color:$submit-button-green;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
@@ -68,7 +68,7 @@ h4 {
 }
 }
 
-.name {
+.card-back-name {
   color: $submit-button-orange;
   font-weight: 700;
   font-family: 'Montserrat', sans-serif;
