--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -20,7 +20,8 @@
 "Growths",
 "Vaccination",
 "Urinary tract infections",
-"Allergies"]
+"Allergies",
+"General consultation"]
      %>
       <%=f.input :date %>
       <%=f.input :time, {:minute_step => 15} %>
