--- a/app/views/owners/edit.html.erb
+++ b/app/views/owners/edit.html.erb
@@ -7,7 +7,7 @@
           <%= f.input :name %>
           <%= f.input :phone_number, :hint => 'No special characters.' %>
           <%= f.input :email  %>
-          <%= f.input :location%>
+          <%= f.input :location, label: "Full address"%>
           <%= f.input :photo, as: :file, label: "Upload a profile picture" %>
         <%= link_to "❌Delete photo", delete_photo_owner_path(@owner), method: :delete, data: { confirm: 'Are you sure?' }, class: "delete_photo" %>
         </div>
