--- a/app/assets/stylesheets/pages/owners/_dash.scss
+++ b/app/assets/stylesheets/pages/owners/_dash.scss
@@ -31,9 +31,35 @@
 .owner-profile-name,
 .owner-profile-phone,
 .owner-profile-email {
-  text-align: center;
+  text-align: left;
 }
 
+.add-pet-dash{
+  text-decoration: none;
+    margin: 15px auto;
+     a{
+  text-decoration: none;
+  background-color: $submit-button-green;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 5px;
+
+     }
+}
+
+.edit-profile-dash {
+  text-decoration: none;
+    margin: 15px auto;
+     a{
+  text-decoration: none;
+  color: $submit-button-green;
+  //padding-top:5px;
+  border: 1px solid $submit-button-green;
+  padding: 5px 15px;
+  border-radius: 5px;
+
+     }
+}
 
 //  RIGHT COLUMN
 
@@ -96,12 +122,14 @@
 
 @import url(https://fonts.googleapis.com/css?family=Raleway|Reenie+Beanie);
 
+
 .pet-card-container {
   box-sizing: border-box;
   perspective: 1000px;
   display: inline-block;
   align-self: center;
   margin: 30px;
+
   //margin-bottom: 50px;
   //border: 1px solid black;
 }
