--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,7 +59,7 @@
       <!-- <div class="box2 col-3 mt-2 pt-2 d-flex align-items-center"> -->
         <div class="container">
           <div class= " d-flex justify-content-center">
-            <%= image_tag('download', height: '45', width: '45') %>
+            <%# <%= image_tag('download', height: '45', width: '45') %> %>
           </div>
 
           <div class= "d-flex justify-content-center">
