--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -24,15 +24,15 @@
         </div>
 
         <div class="">
-          <p><span style="color: gray">Address:</span> <br><%= @owner.location %></p>
+          <p><span style="color: #006A71; font-weight: bold">Address:</span> <br><%= @owner.location %></p>
         </div>
 
         <div class="owner-profile-phone">
-          <p><span style="color: gray">Phone number:</span> <br><%= @owner.phone_number %></p>
+          <p><span style="color: #006A71; font-weight: bold">Phone number:</span> <br><%= @owner.phone_number %></p>
         </div>
 
         <div class="owner-profile-email">
-          <p><span style="color: gray">Account e-mail:</span> <br><%= @owner.email %></p>
+          <p><span style="color: #006A71; font-weight: bold">Account e-mail:</span> <br><%= @owner.email %></p>
         </div>
 
         <div class="edit-profile-dash">
@@ -79,25 +79,27 @@
                 </div>
 
                 <div class="flex-fill one-booking-b-col" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
-                  <div class="d-flex justify-content-end">
-                  <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
 
-                  <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
-                    <%= link_to do %>
-                      <span class="dropdown-item manage-booking-item"><p>Pet health profile</p></span>
-                    <% end %>
+                  <div class="d-flex justify-content-between">
+                    <p>Pet: <%= booking.pet.name%></p>
 
-                    <%= link_to do %>
-                      <span class="dropdown-item manage-booking-item"><p>Change booking</p></span>
-                    <% end %>
+                    <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
+                    <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
+                      <%= link_to do %>
+                        <span class="dropdown-item manage-booking-item"><p>Pet health profile</p></span>
+                      <% end %>
 
-                    <%= link_to do %>
-                      <span class="dropdown-item manage-booking-item"><p>Cancel booking</p></span>
-                    <% end %>
+                      <%= link_to do %>
+                        <span class="dropdown-item manage-booking-item"><p>Change booking</p></span>
+                      <% end %>
 
+                      <%= link_to do %>
+                        <span class="dropdown-item manage-booking-item"><p>Cancel booking</p></span>
+                      <% end %>
+                    </div>
                   </div>
-                  </div>
-                  <p>Pet: <%= booking.pet.name%></p>
+
+
                   <p>Clinic: <%= booking.vet.user.name%></p>
                   <p>Address: <%= booking.vet.user.location %></p>
                   <p>Veterinary: <%= booking.vet.first_name %> <%= booking.vet.last_name %></p>
