--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -114,7 +114,7 @@
       </div>
 
       <div class="col-3 header-a d-flex align-items-start">
-        <p><strong>Treatment h</strong><br></p>
+        <p><strong>Treatment</strong><br></p>
       </div>
 
        <div class="d-flex align-items-center last-box col-3" >
