--- a/app/views/clinics/edit.html.erb
+++ b/app/views/clinics/edit.html.erb
@@ -12,9 +12,9 @@
           <%= f.input :bio, label: "Description" %>
           <%= f.input :location, label: "Full address" %>
           <%= f.input :photo, as: :file, label: "Upload a clinic logo" %>
-          <%= link_to "Delete photo", delete_photo_clinic_path, method: :delete %>
-         <%= f.input :pictures, as: :file, input_html: {:multiple => true} %>
-         <%= link_to "Delete photo", delete_pictures_clinic_path, method: :delete %>
+          <%= link_to "❌ Delete logo", delete_photo_clinic_path, method: :delete, class: "delete" %>
+         <%= f.input :pictures, as: :file, input_html: {:multiple => true}, label: "Upload a clinic photos",  hint: "Upload at least 3 photos for better visual" %>
+         <%= link_to "❌ Delete clinic photos", delete_pictures_clinic_path, method: :delete, class: "delete" %>
           <div class="clinic-edit-buttons d-flex justify-content-around">
             <%= f.submit "Submit", disable_with: 'Submiting...', class: "submit_class" %>
             <%= link_to "Back", clinic_path(@clinic), class: "btn_back"  %>
