--- a/app/views/vets/edit.html.erb
+++ b/app/views/vets/edit.html.erb
@@ -9,7 +9,7 @@
           <%= f.input :first_name %>
           <%= f.input :last_name %>
           <%= f.input :speciality %>
-          <%= f.input :bio %>
+          <%= f.input :bio, as: :text, input_html: { class: "form-bar-width", maxlength: 200} %>
           <%= f.input :photo, as: :file, label: "Upload a photo" %>
           <%= link_to "Delete photo", delete_photo_clinic_vet_path(@clinic, @vet), method: :delete, data: { confirm: 'Are you sure?' } %>
           <div class="vet-new-buttons d-flex justify-content-around">
