--- a/app/assets/stylesheets/pages/health_records/_new.scss
+++ b/app/assets/stylesheets/pages/health_records/_new.scss
@@ -1,10 +1,12 @@
 .health_record-background {
   background-size: cover;
-  background-position: center;
-  padding: 20px 0;
-  display: flex;
+  background-position: center center;
+  background-repeat: no-repeat;
+  padding: 20px;
   background-image: image-url("paws.png");
   height: 100vh;
+  align-items: center;
+  overflow-y: auto;
 }
 
 
@@ -15,8 +17,9 @@
   .health_record-form-container {
     padding-left: 20px;
     padding-right: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+    padding-bottom: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
   background-color: $submit-button-green;
   height-max: 300px;
   border-radius:3px;
