--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -68,12 +68,12 @@
                 </div>
                 <div class="one-booking-a-col">
 
-                  <p>Date:<br><%= booking.date %></p>
-                  <p>Time:<br><%= booking.time.to_s(:time)  %></p>
+                  <p><strong>Date:</strong><br><%= booking.date %></p>
+                  <p><strong>Time:</strong><br><%= booking.time.to_s(:time)  %></p>
                   <% if booking.accepted? %>
-                    <p> Status:<br><span style="color: green; font-weight: bold">Confirmed</span></p>
+                    <p><strong>Status:</strong><br><span style="color: green; font-weight: bold">Confirmed</span></p>
                   <% else %>
-                    <p> Status:<br><span style="color: #F1C232; font-weight: bold">Pending</span></p>
+                    <p><strong>Status:</strong><br><span style="color: #F1C232; font-weight: bold">Pending</span></p>
                   <% end %>
                   <!-- <p> Status: <%#= booking.accepted? ? "Confirmed" : "Pending" %></p> -->
                 </div>
@@ -81,7 +81,7 @@
                 <div class="flex-fill one-booking-b-col" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
 
                   <div class="d-flex justify-content-between">
-                    <p>Pet: <%= booking.pet.name%></p>
+                    <p><strong>Pet:</strong> <%= booking.pet.name%></p>
 
                     <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
                     <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
@@ -100,9 +100,9 @@
                   </div>
 
 
-                  <p>Clinic: <%= booking.vet.user.name%></p>
-                  <p>Address: <%= booking.vet.user.location %></p>
-                  <p>Veterinary: <%= booking.vet.first_name %> <%= booking.vet.last_name %></p>
+                  <p><strong>Clinic:</strong> <%= booking.vet.user.name%></p>
+                  <p><strong>Address:</strong> <%= booking.vet.user.location %></p>
+                  <p><strong>Veterinary:</strong> <%= booking.vet.first_name %> <%= booking.vet.last_name %></p>
                 </div>
 
 
@@ -206,7 +206,7 @@
           <!-- MAP -->
           <div class="col-4">
             <div id="map"
-              style="width: 100%; height: 600px; margin-top: 30px; margin-bottom: 20px;"
+              style="width: 100%; height: 700px; margin-top: 30px; margin-bottom: 20px;"
               data-markers="<%= @markers.to_json %>"
               data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
             </div>
